--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color:red">rstudent</h1>
+    <h1>Github Desktop</h1>
+    <h4>bu oddiy text</h4>
 </body>
 </html>
